# my_jump_king

./: .gitignore  CMakeLists.txt  events.c  events.h  main.c  map_initialization.h  my_jump_king.cbp  my_jump_king.depend  my_jump_king.layout  standard_functions.c  struct.h
map/: map.txt
src/: collision.c  collision.h  events.c  events.h  gravity.c  gravity.h  map_initialization.c  standard_functions.c  standard_functions.h  struct.h
